Updated DQN and added requirements

--- a/DRL/DQN/DQN.ipynb
+++ b/DRL/DQN/DQN.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "75d919f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
+    "from agent import QNetwork\n",
     "from torch import optim\n",
     "from tqdm import tqdm\n",
-    "from utils import get_epsilon, get_weights, load_buffer, make_env, test_agent, UniformReplay\n",
-    "\n",
+    "from utils import get_epsilon, get_weights_buffer, get_env, test_agent, UniformReplay\n",
     "\n",
     "import ale_py\n",
     "import gymnasium as gym\n",
@@ -29,104 +28,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a462b71b",
+   "cell_type": "markdown",
+   "id": "473f9ec9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class QNet(nn.Module):\n",
-    "    \"\"\"Defines the DeepMind network architecture (i.e. model) to\n",
-    "       learn a given environment. The architecture is modeled \n",
-    "       after the one proposed in 2015 with minor modifications.\n",
-    "       This also incorporates dueling architecture.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, obs_space:gym.spaces.box, act_space:gym.spaces.discrete, dueling:bool=False):\n",
-    "        \"\"\"Defines the network building blocks in order to learn \n",
-    "        a given environment.\n",
-    "        \n",
-    "        Parameters:\n",
-    "            - obs_space (gym.spaces.box) : The observation space\n",
-    "                                          of the environment.\n",
-    "            - act_space (gym.spaces.discrete) : The action space \n",
-    "                                               of the environment.\n",
-    "            - dueling (bool) : whether or not to use the dueling \n",
-    "                              network architecture. Defaulted to \n",
-    "                              False.\n",
-    "\n",
-    "        Returns:\n",
-    "            - None\n",
-    "        \"\"\"\n",
-    "\n",
-    "        super().__init__()\n",
-    "\n",
-    "        in_channels = obs_space.shape[0]\n",
-    "        out_features = act_space.n\n",
-    "        self.dueling = dueling\n",
-    "\n",
-    "        self.conv = nn.Sequential(nn.Conv2d(in_channels=in_channels, out_channels=32, kernel_size=8, stride=4),\n",
-    "                                  nn.ReLU(),\n",
-    "                                  nn.Conv2d(in_channels=32, out_channels=64, kernel_size=4, stride=2),\n",
-    "                                  nn.ReLU(),\n",
-    "                                  nn.Conv2d(in_channels=64, out_channels=64, kernel_size=3, stride=1),\n",
-    "                                  nn.ReLU())\n",
-    "        \n",
-    "        self.fc1 = nn.Sequential(nn.Flatten(), \n",
-    "                                 nn.Linear(in_features=64*7*7, out_features=512),\n",
-    "                                 nn.ReLU())\n",
-    "        \n",
-    "        # Create dueling streams\n",
-    "        if self.dueling:\n",
-    "            self.val_stream = nn.Linear(in_features=512, out_features=1)\n",
-    "            self.adv_stream = nn.Linear(in_features=512, out_features=out_features)\n",
-    "\n",
-    "        # Normal architecture\n",
-    "        else:\n",
-    "            self.fc2 = nn.Linear(in_features=512, out_features=out_features)\n",
-    "\n",
-    "    def forward(self, imgs:torch.tensor) -> torch.tensor:\n",
-    "        \"\"\"Defines the forward pass of the network. In particular,\n",
-    "        the defined network, takes in as an input a tensor of states\n",
-    "        or single state and produces Q-vals for all available actions \n",
-    "        for each state (or all actions for a single state).\n",
-    "        \n",
-    "        Parameters:\n",
-    "            - imgs (torch.Tensor) : the stacked images representing \n",
-    "                                    the \"state\" of the environment.\n",
-    "                                    The tensor should be of shape \n",
-    "                                    N x 84 x 84 x m, where N is the\n",
-    "                                    batch size of states given, and\n",
-    "                                    m = obs_space.shape[0].\n",
-    "        Returns:\n",
-    "        - (torch.Tensor) : The approximated Q-values Q(s,a), for the \n",
-    "                           given states/state tensor. The tensor is \n",
-    "                           of shape N x action_space.n.\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        x_fc1 = self.fc1(self.conv(imgs))\n",
-    "\n",
-    "        # Compute Q(s,a) using A(s,a)\n",
-    "        if self.dueling:\n",
-    "\n",
-    "            state_vals = self.val_stream(x_fc1)\n",
-    "            adv_vals = self.adv_stream(x_fc1)\n",
-    "            q_vals = state_vals + (adv_vals - adv_vals.mean(dim=1, keepdim=True))\n",
-    "\n",
-    "        else:\n",
-    "            q_vals = self.fc2(x_fc1)\n",
-    "\n",
-    "        return q_vals"
+    "# DQN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e28dfaf8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def DQN(env:gym.Env, device:torch.device, optimizer_LR:float=0.00025, α:float=0.95, eps:float=0.01, \n",
+    "def DQN(env:gym.Env, qnet:QNetwork, device:torch.device, optimizer_LR:float=0.00025, α:float=0.95, eps:float=0.01, \n",
     "        objective:nn.functional=nn.HuberLoss(), batch_size:int=32, buffer_size:int=int(1e6), \n",
     "        buffer_start_size:int=50_000, gamma:float=0.99, num_episodes:int=int(3e6), \n",
     "        episodes_decay:int=int(6e5), epsilon_start:float=1.0, epsilon_min:float=0.1, \n",
@@ -144,6 +60,8 @@
     "\n",
     "    Parameters: \n",
     "        - env (gym.Env) : the environment to emulate.\n",
+    "        - qnet (QNetwork) : the Q-network class to train. Note\n",
+    "                            this is the class not an instance.\n",
     "        - device (torch.device) : the device tag indicating whe-\n",
     "                                 re to load to load the tensor.\n",
     "        - optimizer_LR (float) : the learning rate for the RMSProp\n",
@@ -171,7 +89,7 @@
     "                                   size the buffer must be in-\n",
     "                                   itialized to. Defaulted to\n",
     "                                   50_000.\n",
-    "        - gamme (float) : the discount factor to use for calcul-\n",
+    "        - gamma (float) : the discount factor to use for calcul-\n",
     "                         ating future rewards. Defaulted to \n",
     "                         0.99.\n",
     "        - num_episodes (int) : the number of episodes used to t-\n",
@@ -221,31 +139,29 @@
     "        - None\n",
     "    \"\"\"\n",
     "\n",
-    "    buffer = UniformReplay(capacity=buffer_size, min_size=buffer_start_size)\n",
-    "    buffer.initialize(env)\n",
+    "    Qnet = qnet(env.observation_space.shape[0], env.action_space.n, dueling=use_dueling).to(device)    \n",
+    "    target_Qnet = qnet(env.observation_space.shape[0], env.action_space.n, dueling=use_dueling).to(device)\n",
     "\n",
-    "    Qnet = QNet(env.observation_space, env.action_space, dueling=use_dueling).to(device)    \n",
-    "    target_Qnet = QNet(env.observation_space, env.action_space, dueling=use_dueling).to(device)\n",
-    "\n",
-    "    recent_weights = get_weights(dir=WEIGHTS, device=device)\n",
-    "    if recent_weights is None:\n",
+    "    recent_files = get_weights_buffer(dir=WEIGHTS, device=device)\n",
+    "    if recent_files is None:\n",
     "        print('Initializing with random weights.')\n",
+    "        buffer = UniformReplay(capacity=buffer_size, min_size=buffer_start_size)\n",
+    "        buffer.initialize(env)\n",
     "        target_Qnet.load_state_dict(Qnet.state_dict())\n",
     "\n",
     "    else:\n",
     "        print('Working from a trained model.')\n",
-    "        Qnet.load_state_dict(recent_weights)\n",
-    "        target_Qnet.load_state_dict(recent_weights)\n",
-    "        buffer = load_buffer(dir=WEIGHTS)\n",
+    "        weights, buffer = list(recent_files.values())\n",
+    "        Qnet.load_state_dict(weights)\n",
+    "        target_Qnet.load_state_dict(weights)\n",
     "\n",
     "    optimizer = optim.RMSprop(params=Qnet.parameters(), lr=optimizer_LR, alpha=α, eps=eps)\n",
     "    timesteps = 0\n",
     "    parameters_updated = 0\n",
     "\n",
-    "    pbar = tqdm(iterable=range(1, num_episodes+1), desc='Episode', position=0)\n",
+    "    pbar = tqdm(iterable=range(1, num_episodes+1), desc='Training', position=0)\n",
     "\n",
-    "    for episode in range(num_episodes):\n",
-    "    #for episode in range(num_episodes):\n",
+    "    for episode in range(1, num_episodes+1):\n",
     "        \n",
     "        terminated = False\n",
     "        state, info = env.reset()\n",
@@ -275,10 +191,8 @@
     "\n",
     "                # Compute y_j\n",
     "                if use_DDQN:\n",
-    "                        online_Qvals = Qnet(next_states)\n",
-    "                        online_best_Qindices = online_Qvals.argmax(dim=1, keepdim=True)                                       # Use of keepdim keeps the output with the same shape except now dimension 1 is of size 1\n",
-    "                        target_Qvals = target_Qnet(next_states)\n",
-    "                        target_selected_Qvals = target_Qvals.gather(dim=1, index=online_best_Qindices)                        # This use of keepdim allows to not have to use unsqueeze(1) in online_best_Qindices\n",
+    "                        online_best_Qindices = (Qnet(next_states)).argmax(dim=1, keepdim=True)                                              # Use of keepdim keeps the output with the same shape except now dimension 1 is of size 1\n",
+    "                        target_selected_Qvals = (target_Qnet(next_states)).gather(dim=1, index=online_best_Qindices)                        # This use of keepdim allows to not have to use unsqueeze(1) in online_best_Qindices\n",
     "                        y_j = (rewards.unsqueeze(-1) + gamma * target_selected_Qvals * (1. - terminations.unsqueeze(-1).float())).squeeze(-1)\n",
     "\n",
     "                else:\n",
@@ -303,84 +217,40 @@
     "                target_Qnet.load_state_dict(Qnet.state_dict())\n",
     "\n",
     "            state = next_state\n",
+    "            \n",
     "        avg_loss = episodic_loss / loss_ct if loss > 0 else 0\n",
-    "        episodic_reward = info['episode']['r']\n",
-    "        pbar.set_postfix(episodic_reward=episodic_reward, avg_loss=avg_loss)\n",
+    "        pbar.set_postfix(episodic_reward=info['episode']['r'], avg_loss=avg_loss)\n",
     "        pbar.update()\n",
     "\n",
-    "\n",
-    "        # Save model weights (including at last episode)\n",
-    "        if (episode % save_freq == 0) or (episode == num_episodes - 1):\n",
-    "            filename = '/model_weights' + f\"_episode{episode}.pth\"\n",
+    "        # Save model weights and buffer (including at last episode)\n",
+    "        if (episode % save_freq == 0) or (episode == num_episodes):\n",
+    "            filename = '/Qnet_weights' + f\"_episode{episode}.pth\"\n",
     "            torch.save(Qnet.state_dict(), WEIGHTS+filename)\n",
-    "\n",
-    "            if episode == num_episodes - 1:\n",
-    "                buffer.save(drl_directory=WEIGHTS)\n",
+    "            buffer.save(drl_directory=WEIGHTS, episode=episode)\n",
     "\n",
     "    env.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6ee9bd14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A.L.E: Arcade Learning Environment (version 0.10.2+c9d4b19)\n",
-      "[Powered by Stella]\n",
-      "/Users/oscarescobar/Desktop/ACME/env/lib/python3.10/site-packages/gymnasium/wrappers/rendering.py:283: UserWarning: \u001b[33mWARN: Overwriting existing videos at /Users/oscarescobar/Desktop/ACME/LabDev/DRL/DQN/vids folder (try specifying a different `video_folder` for the `RecordVideo` wrapper if this is not desired)\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_env = make_env(vid_dir=VIDS) # Use default breakout game\n",
+    "train_env = get_env(vid_dir=VIDS) # Use default breakout game\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4db9492e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing memory buffer...\n",
-      "Memory buffer initialized.\n",
-      "Initializing with random weights.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Episode: 100%|██████████| 100/100 [02:33<00:00,  1.53s/it, avg_loss=0.0036, episodic_reward=2] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Replay buffer saved to ./weights_buffers/replay_buffer.pickle.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "DQN(env=train_env, device=device, buffer_size=5_000, buffer_start_size=1_000, num_episodes=100, target_update_freq=150, episodes_decay=30, use_DDQN=True, use_dueling=True)"
+    "DQN(env=train_env, qnet=QNetwork, device=device, buffer_size=5_000, buffer_start_size=1_000, \n",
+    "    num_episodes=5_000, target_update_freq=500, episodes_decay=3_000, use_DDQN=True, use_dueling=True)"
    ]
   },
   {
@@ -388,26 +258,24 @@
    "execution_count": null,
    "id": "91d62395",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/oscarescobar/Desktop/ACME/env/lib/python3.10/site-packages/gymnasium/wrappers/rendering.py:283: UserWarning: \u001b[33mWARN: Overwriting existing videos at /Users/oscarescobar/Desktop/ACME/LabDev/DRL/DQN/vids folder (try specifying a different `video_folder` for the `RecordVideo` wrapper if this is not desired)\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "test_env = make_env(VIDS, recording_freq=5, vid_name_prefix='drl-test-video')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1e24710",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_agent(QNet, test_env, device, WEIGHTS, uses_dueling=True, num_test_episodes=2)"
+    "test_agent(QNetwork, game='BreakoutNoFrameskip-v4', device=device, weights_dir=WEIGHTS, vid_dir=VIDS, uses_dueling=True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "gymEnv",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
